--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+This is a Debian Lenny package dhcp3-3.0.6.dfsg customized by Vyatta.
+
+
+
 	       Internet Systems Consortium DHCP Distribution
 	                      Version 3.0.6
 		              June 29, 2007
