--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+vyatta-dhcp3 (3.0.6.dfsg-3) unstable; urgency=low
+
+  VC4.0.1
+  [ Mark O'Brien ]
+
+
+  [ rbalocca ]
+  * These prerm scripts were preventing package upgrade
+
+  [ Mark O'Brien ]
+
+ -- Mark O'Brien <mobrien@vyatta.com>  Tue, 18 Mar 2008 16:59:48 -0700
+
 vyatta-dhcp3 (3.0.6.dfsg-2) unstable; urgency=low
 
   vc4.0.0
