--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+vyatta-dhcp3 (3.0.6.dfsg-4) unstable; urgency=low
+
+  3.0.2
+  [ Mark O'Brien ]
+
+  * 3.0.1
+
+  [ rbalocca ]
+  * Reformat debian control file
+
+  [ Mark O'Brien ]
+
+ -- Mark O'Brien <mobrien@vyatta.com>  Fri, 04 Apr 2008 18:00:51 -0700
+
 vyatta-dhcp3 (3.0.6.dfsg-3) unstable; urgency=low
 
   VC4.0.1
