--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ vyatta-dhcp3 (3.0.6.dfsg-6) unstable; urgency=low
 
 vyatta-dhcp3 (3.0.6.dfsg-5) unstable; urgency=low
 
-  VC4.0.2
+  VC4.0.2 release candidate
 
 
  -- Mark O'Brien <mobrien@vyatta.com>  Wed, 16 Apr 2008 09:50:12 -0700
