--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+vyatta-dhcp3 (3.0.6.dfsg-11) unstable; urgency=low
+
+	  3.1.2
+  [ Mark O'Brien ]
+
+
+  [ Mohit Mehta ]
+  * Fix Bug 3116 dhcp client doesn't remove default route when
+    unconfigured
+  * update resolv.conf from here when a lease is released
+  * => modified /sbin/dhclient-script to work nicely with our CLI for
+    dhcp options
+
+  [ Mark O'Brien ]
+
+ -- Mark O'Brien <mobrien@firebolt.vyatta.com>  Wed, 23 Jul 2008 21:36:03 -0700
+
 vyatta-dhcp3 (3.0.6.dfsg-10) unstable; urgency=low
 
 	  3.1.0
