Fix man page error
Need to use "." rather than '.' for nroff

--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -1133,7 +1133,7 @@ The values of these fields are those defined in the DNS protocol specification.
 .PP
 Specifies the domain name that the client wishes to use.   This can be a
 fully-qualified domain name, or a single label.   If there is no trailing
-'.' character in the name, it is not fully-qualified, and the server will
+"." character in the name, it is not fully-qualified, and the server will
 generally update that name in some locally-defined domain.
 .RE
 .PP
