Fix man page error for omapip
Lintian warning

--- a/omapip/omapi.3
+++ b/omapip/omapi.3
@@ -37,7 +37,7 @@ applications, and for querying them for their state. It is currently
 used by the ISC DHCP server and this outline addresses the parts of
 OMAPI appropriate to the clients of DHCP server. It does this by also
 describing the use of a thin API layered on top of OMAPI called
-'dhcpctl'
+.IR dhcpctl .
 .PP
 OMAPI uses TCP/IP as the transport for server communication, and
 security can be imposed by having the client and server
