--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (3.0.6.dfsg-17) unstable; urgency=low
+
+  * missing hyphen
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Fri, 03 Apr 2009 18:21:46 -0700
+
 vyatta-dhcp3 (3.0.6.dfsg-16) unstable; urgency=low
 
   * Remove unneeded directory creation
