--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (3.0.6.dfsg-20) unstable; urgency=low
+
+  * Handle MTU override on any interface type
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Mon, 27 Apr 2009 10:19:16 -0700
+
 vyatta-dhcp3 (3.0.6.dfsg-19) unstable; urgency=low
 
   * Remove interface alias support
