--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+vyatta-dhcp3 (3.0.6.dfsg-21) unstable; urgency=low
+
+  * Fix MTU management
+  * cleanup ignored files list
+  * add flush to PREINIT
+  * Rework how dhcp manages routes
+  * Bring down interface to force FIB to be flushed
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Tue, 28 Apr 2009 21:28:14 -0700
+
 vyatta-dhcp3 (3.0.6.dfsg-20) unstable; urgency=low
 
   * Handle MTU override on any interface type
