Fix Vyatta related README line

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a Debian Lenny package dhcp3-3.0.6.dfsg customized by Vyatta.
+      This is a ISC DHCP Distribution version 4.1.0 customized by Vyatta.
 	      Internet Systems Consortium DHCP Distribution
 		              Version 4.1.0
 			     5 December 2008
