--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (3.0.6.dfsg-24+jenner4) unstable; urgency=low
+
+  * replace alias vtysh with vyatta-vtysh
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Fri, 10 Jul 2009 16:11:06 -0700
+
 vyatta-dhcp3 (3.0.6.dfsg-24+jenner3) unstable; urgency=low
 
   * Use static routes rather than kernel routes for DHCP
