--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+vyatta-dhcp3 (4.1.0+vyatta2) unstable; urgency=low
+
+  [ Stephen Hemminger ]
+  * Use static routes rather than kernel routes for DHCP
+
+  [ Mohit Mehta ]
+  * replace alias vtysh with vyatta-vtysh
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Fri, 10 Jul 2009 17:06:26 -0700
+
 vyatta-dhcp3 (4.1.0+vyatta1) unstable; urgency=low
 
   [ An-Cheng Huang ]
