--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (3.0.6.dfsg-24+jenner5) unstable; urgency=low
+
+  * merge relevant 4.1.0p1 changes
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Tue, 14 Jul 2009 17:09:03 -0700
+
 vyatta-dhcp3 (3.0.6.dfsg-24+jenner4) unstable; urgency=low
 
   * replace alias vtysh with vyatta-vtysh
