--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.0+vyatta3) unstable; urgency=low
+
+  * merge relevant 4.1.0p1 changes
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Tue, 14 Jul 2009 17:15:12 -0700
+
 vyatta-dhcp3 (4.1.0+vyatta2) unstable; urgency=low
 
   [ Stephen Hemminger ]
