--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-dhcp3 (3.0.6.dfsg-13+islavista2) unstable; urgency=low
+
+  * UNRELEASED
+  * merge dhcp 4.1.0 from jenner
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Wed, 15 Jul 2009 16:48:15 -0700
+
 vyatta-dhcp3 (3.0.6.dfsg-13+islavista1) unstable; urgency=low
 
   * UNRELEASED
