--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.0+vyatta4) unstable; urgency=low
+
+  * Bugfix 4951:  Don't fail if IPv6 kernel module is not loaded.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Wed, 23 Sep 2009 12:01:23 -0700
+
 vyatta-dhcp3 (4.1.0+vyatta3) unstable; urgency=low
 
   * merge relevant 4.1.0p1 changes
