--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-dhcp3 (4.1.0+vyatta7) unstable; urgency=low
+
+  * Fix typo in last patch PATH_DHCPD6_DB
+  * Make sure correct paths used
+
+ -- Stephen Hemminger <stephen.hemminger@vyatta.com>  Tue, 22 Dec 2009 11:23:30 -0800
+
 vyatta-dhcp3 (4.1.0+vyatta6) unstable; urgency=low
 
   * Set explicit path for dhcp ipv6 info
