--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.0+vyatta11) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Wed, 17 Feb 2010 16:14:09 -0800
+
 vyatta-dhcp3 (4.1.0+vyatta10) unstable; urgency=low
 
   * Use Debian hardening option
