--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.0+vyatta14) unstable; urgency=low
+
+  * Update DHCP client back-end script for DHCPv6.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Fri, 16 Apr 2010 16:35:34 -0700
+
 vyatta-dhcp3 (4.1.0+vyatta13) unstable; urgency=low
 
   * Force dependency on recent version of quagga
