--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.1+vyatta1) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Thu, 20 May 2010 16:42:55 -0700
+
 vyatta-dhcp3 (4.1.0+vyatta16) unstable; urgency=low
 
   [ Mohit Mehta ]
