--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.1+vyatta2) unstable; urgency=low
+
+  * Add hooks to allow DHCPv6 client parameters only mode.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Mon, 31 May 2010 23:56:25 -0700
+
 vyatta-dhcp3 (4.1.1+vyatta1) unstable; urgency=low
 
   * UNRELEASED
