--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.1+vyatta2+larkspur1) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Thu, 22 Jul 2010 17:18:03 -0700
+
 vyatta-dhcp3 (4.1.1+vyatta2) unstable; urgency=low
 
   * Add hooks to allow DHCPv6 client parameters only mode.
