--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.1+vyatta2+larkspur2) unstable; urgency=low
+
+  * ISC DHCP version 4.1.1-P1
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Tue, 27 Jul 2010 19:52:43 -0700
+
 vyatta-dhcp3 (4.1.1+vyatta2+larkspur1) unstable; urgency=low
 
   * UNRELEASED
