--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.1+vyatta6) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Thu, 02 Sep 2010 18:28:59 -0700
+
 vyatta-dhcp3 (4.1.1+vyatta5) unstable; urgency=low
 
   * fix squeeze build and clean up
