--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.1+vyatta6+mendocino1) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Tue, 28 Dec 2010 20:37:09 +0000
+
 vyatta-dhcp3 (4.1.1+vyatta6) unstable; urgency=low
 
   * UNRELEASED
