--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.1+vyatta7) unstable; urgency=low
+
+  * don't ignore .*
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Tue, 28 Dec 2010 13:48:55 -0800
+
 vyatta-dhcp3 (4.1.1+vyatta6) unstable; urgency=low
 
   * UNRELEASED
