--- a/client/dhclient.leases.5
+++ b/client/dhclient.leases.5
@@ -1,6 +1,7 @@
-.\"	$Id: dhclient.leases.5,v 1.4.786.2 2009/07/24 22:04:51 sar Exp $
+.\"	$Id: dhclient.leases.5,v 1.4.786.3 2010/07/02 23:37:06 sar Exp $
 .\"
-.\" Copyright (c) 2004,2009 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2004 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1997-2003 by Internet Software Consortium
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -22,12 +23,12 @@
 .\"   https://www.isc.org/
 .\"
 .\" This software has been written for Internet Systems Consortium
-.\" by Ted Lemon in cooperation with Vixie
-.\" Enterprises.  To learn more about Internet Systems Consortium,
-.\" see ``https://www.isc.org/''.  To learn more about Vixie
-.\" Enterprises, see ``http://www.vix.com''.
+.\" by Ted Lemon in cooperation with Vixie Enterprises.
 .\"
-.\" $Id: dhclient.leases.5,v 1.4.786.2 2009/07/24 22:04:51 sar Exp $
+.\" Support and other services are available for ISC products - see
+.\" https://www.isc.org for more information or to learn more about ISC.
+.\"
+.\" $Id: dhclient.leases.5,v 1.4.786.3 2010/07/02 23:37:06 sar Exp $
 .\"
 .TH dhclient.leases 5
 .SH NAME
