--- a/doc/ja_JP.eucJP/dhcp-options.5
+++ b/doc/ja_JP.eucJP/dhcp-options.5
@@ -1,4 +1,4 @@
-.\"	$Id: dhcp-options.5,v 1.2.786.2 2009/07/24 22:04:52 sar Exp $
+.\"	$Id: dhcp-options.5,v 1.2.786.3 2010/07/13 20:57:18 dhankins Exp $
 .\"
 .\" Copyright (c) 2004,2009 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
@@ -36,7 +36,7 @@
 .\" WORD: Router Solicitation   ルータ要請
 .\" WORD: Mask Discovery	マスク探索
 .\"
-.TH dhcpd-options 5
+.TH dhcp-options 5
 .SH 名称
 dhcp-options - 動的ホスト構成プロトコルのオプション
 .SH 解説
