--- a/relay/dhcrelay.8
+++ b/relay/dhcrelay.8
@@ -1,6 +1,7 @@
 .\"	dhcrelay.8
 .\"
-.\" Copyright (c) 2004,2007,2009 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1997-2003 by Internet Software Consortium
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -22,12 +23,12 @@
 .\"   https://www.isc.org/
 .\"
 .\" This software has been written for Internet Systems Consortium
-.\" by Ted Lemon in cooperation with Vixie
-.\" Enterprises.  To learn more about Internet Systems Consortium,
-.\" see ``https://www.isc.org/''.  To learn more about Vixie
-.\" Enterprises, see ``http://www.vix.com''.
+.\" by Ted Lemon in cooperation with Vixie Enterprises.
 .\"
-.\" $Id: dhcrelay.8,v 1.15.38.2 2009/07/24 22:04:52 sar Exp $
+.\" Support and other services are available for ISC products - see
+.\" https://www.isc.org for more information or to learn more about ISC.
+.\"
+.\" $Id: dhcrelay.8,v 1.15.38.3 2010/07/02 23:37:07 sar Exp $
 .\"
 .TH dhcrelay 8
 .SH NAME
@@ -230,3 +231,7 @@ loops, so when running this way, the maximum hop count should be set
 to a low value.
 .PP
 The loopback interface is not (yet) recognized as a valid interface.
+.SH AUTHOR
+.B dhcrelay(8)
+To learn more about Internet Systems Consortium, see
+.B https://www.isc.org
