--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-dhcp3 (4.1.2+vyatta3) unstable; urgency=low
+
+  * Merge branch 'upstream' into mendocino
+  * Merged ISC DHCP version 4.1.2.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Tue, 25 Jan 2011 18:04:55 -0800
+
 vyatta-dhcp3 (4.1.2+vyatta2) unstable; urgency=low
 
   * Merged ISC DHCP Version 4.1.2.
