--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.2+vyatta5) unstable; urgency=low
+
+  * new branch
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Thu, 07 Jul 2011 20:56:43 -0700
+
 vyatta-dhcp3 (4.1.2+vyatta4) unstable; urgency=low
 
   * ISC DHCP version 4.1.1-P1
