--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-		            Version 4.1.2-P1
-			    25 January 2011
+		           Version 4.1-ESV-R3
+			      27 July 2011
 
 			      README FILE
 
@@ -33,6 +33,8 @@ the ISC DHCP Distribution.
 	 5.6	 FreeBSD
 	 5.7	 NeXTSTEP
 	 5.8	 SOLARIS
+	  5.8.1 Solaris 11
+	  5.8.2 Other Solaris Items
 	 5.9	 AIX
 	 5.10	 MacOS X
 	6	SUPPORT
@@ -94,8 +96,12 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.1.2-P1, a patch release which fixes a bug which
-could cause a server to crash after processing a DHCPv6 decline message.
+This is ISC DHCP 4.1-ESV-R3, an extended support (ESV)
+release that provides patches for a number of bugs.
+
+ESVs are intended for users who have longer upgrade constraints 
+Please see our web page http://www.isc.org/downloads/extended-support
+for more information on ESVs
 
 In this release, the DHCPv6 server should be fully functional on Linux,
 Solaris, or any BSD.  The DHCPv6 client should be similarly functional
@@ -131,12 +137,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.1.2-P1.tar.gz
-	tar xvf dhcp-4.1.2-P1.tar
+	gunzip dhcp-4.1-ESV-R3.tar.gz
+	tar xvf dhcp-4.1-ESV-R3.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.1.2-P1 subdirectory that you've just created and
+Now, cd to the dhcp-4.1-ESV-R3 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
@@ -407,6 +413,21 @@ must install this extension in order to get dhcpd or dhclient to work.
 
 			       SOLARIS
 
+				Solaris 11
+
+We have integrated a patch from Oracle to use sockets instead of
+DLPI on Solaris 11.  This functionality was written for use with
+Solaris Studio 12.2 and requires the system/header package.
+
+By default this code is disabled in order to minimize disruptions
+for current users.  In order to enable this code you will need to
+enable both USE_SOCKETS and USE_V4_PKTINFO as part of the
+configuration step.  The command line would be something like:
+
+	  ./configure --enable-use-sockets --enable-ipv4-pktinfo
+
+				Other Solaris Items
+
 One problem which has been observed and is not fixed in this
 patchlevel has to do with using DLPI on Solaris machines.  The symptom
 of this problem is that the DHCP server never receives any requests.
@@ -449,9 +470,25 @@ server and relay will work only on a single interface.  (They do work
 on multi-interface machines if configured to listen on only one of the
 interfaces.)
 
+We have reports of Windows XP clients having difficutly retrieving
+addresses from a server running on an AIX machine.  This issue
+was traced to the client requiring messages be sent to the all ones
+broadcast address (255.255.255.255) while the AIX server was sending 
+to 192.168.0.255.
+
+You may be able to solve this by including a relay between the client
+and server with the relay configured to use a broadcast of all-ones.
+
+A second option that worked for AIX 5.1 but doesn't seem to work for
+AIX 5.3 was to:
+	create a host file entry for all-ones (255.255.255.255)
+and then add a route:
+	route add -host all-ones -interface <local-ip-address>
+
 The ISC DHCP distribution does not include a dhclient-script for AIX--
 AIX comes with a DHCP client.  Contribution of a working dhclient-script
 for AIX would be welcome.
+
 
 			       MacOS X
 
