--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.2+vyatta6) unstable; urgency=low
+
+  * ISC DHCP version 4.1-ESV-R3
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Thu, 25 Aug 2011 16:33:42 -0700
+
 vyatta-dhcp3 (4.1.2+vyatta5) unstable; urgency=low
 
   * new branch
