--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.2+vyatta4+napa2) unstable; urgency=low
+
+  * ISC DHCP version 4.1-ESV-R3
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Mon, 29 Aug 2011 11:40:41 -0700
+
 vyatta-dhcp3 (4.1.2+vyatta4+napa1) unstable; urgency=low
 
   * new branch
