--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.2+vyatta6+oxnard1) unstable; urgency=low
+
+  * new branch
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Sat, 03 Mar 2012 02:23:10 -0800
+
 vyatta-dhcp3 (4.1.2+vyatta6) unstable; urgency=low
 
   * ISC DHCP version 4.1-ESV-R3
