--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-dhcp3 (4.1.2+vyatta6+oxnard2) unstable; urgency=low
+
+  * ISC DHCP version 4.1-ESV-R6
+  * Ignore .deps directories
+
+ -- James Davidson <james.davidson@vyatta.com>  Mon, 30 Jul 2012 15:59:18 -0700
+
 vyatta-dhcp3 (4.1.2+vyatta6+oxnard1) unstable; urgency=low
 
   * new branch
