--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.2+vyatta11) unstable; urgency=low
+
+  * new branch
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 12 Oct 2012 19:47:21 -0700
+
 vyatta-dhcp3 (4.1.2+vyatta10) unstable; urgency=low
 
   * new branch
