--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.2+vyatta9+daisy1) unstable; urgency=low
+
+  * new branch
+
+ -- James Davidson <james.davidson@vyatta.com>  Mon, 14 Jan 2013 17:07:06 -0800
+
 vyatta-dhcp3 (4.1.2+vyatta9) unstable; urgency=low
 
   * ISC DHCP version 4.1-ESV-R7
