--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.2+vyatta9+hydrogen1) unstable; urgency=low
+
+  * New branch
+
+ -- Daniil Baturin <daniil@baturin.org>  Sun, 17 Nov 2013 00:25:00 +0100
+
 vyatta-dhcp3 (4.1.2+vyatta9+daisy2) unstable; urgency=low
 
   * allow optional dependency on vyatta-unicast
