--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.2+vyatta12) unstable; urgency=low
+
+  * ISC DHCP version 4.1-ESV-R8
+
+ -- Mihail Vasiliev <mickvav@gmail.com>  Wed, 27 Nov 2013 17:08:06 +0400
+
 vyatta-dhcp3 (4.1.2+vyatta11) unstable; urgency=low
 
   * new branch
