--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.8+vyos1+helium1) unstable; urgency=low
+
+  * New branch
+
+ -- Daniil Baturin <daniil@baturin.org>  Sat, 15 Feb 2014 18:17:38 +0100
+
 vyatta-dhcp3 (4.1.8+hydrogen3) unstable; urgency=low
 
   [ Mihail Vasiliev ]
