--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.8+vyos2+lithium1) unstable; urgency=low
+
+  * New branch
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Fri, 05 Dec 2014 19:43:48 +0000
+ 
 vyatta-dhcp3 (4.1.8+vyos1+helium2) unstable; urgency=low
 
   * Replace bash with vbash in client script.
