--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-dhcp3 (4.1.8+vyos2+lithium2) unstable; urgency=low
+
+  * Update maintainer address
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Fri, 26 Dec 2014 11:01:18 +0000
+ 
 vyatta-dhcp3 (4.1.8+vyos2+lithium1) unstable; urgency=low
 
   * New branch
