--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+yatta-dhcp3 (4.1.8+vyos2+lithium3) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-dhcp3: call make_resolv_conf after the ip address is active
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Sat, 28 Feb 2015 11:44:17 +0000
+ 
 vyatta-dhcp3 (4.1.8+vyos2+lithium2) unstable; urgency=low
 
   * Update maintainer address
